--- a/src/app/components/car-selector.component.css
+++ b/src/app/components/car-selector.component.css
@@ -1,4 +1,3 @@
-/* General Navbar Styles */
 .navbar {
     background-color: #f8f9fa !important;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
@@ -11,20 +10,18 @@
     text-decoration: none;
 }
 
-/* Brand/Logo */
 .navbar-brand {
     font-weight: bold;
     font-size: 1.2rem;
 }
 
-/* Dropdown Styling */
 .dropdown-menu {
     border: none;
     border-radius: 8px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     font-family: inherit;
     min-width: 150px;
-    padding: 0; /* Remove default padding */
+    padding: 0;
     width: auto;
 }
 
@@ -39,17 +36,15 @@
     cursor: pointer;
 }
 
-/* Grid Layout for Makes Dropdown */
 #makeDropdown .dropdown-menu {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); /* Two columns on larger screens */
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     gap: 10px; 
 }
 
-/* Media Query for Smaller Screens (Optional) */
 @media (max-width: 768px) {
     #makeDropdown .dropdown-menu {
-        grid-template-columns: 1fr; /* Single column on smaller screens */
+        grid-template-columns: 1fr;
     }
 }
 
@@ -65,10 +60,19 @@ li {
   text-decoration: none;
   font-size: large;
 }
-a {
-    margin-bottom: 5px;
-}
+
+.engine-specs {
+    margin-left: 20px;
+    position: absolute;
+    top: 50px;
+    border-radius: 15px;
+    margin-right: 20px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    right: 300px;
+    min-width: 370px;
+  }
+
 .navbar-nav {
-    display: flex; /* Enable flexbox for the navbar items */
-    justify-content: space-between; /* Distribute items evenly with space between */
+    display: flex;
+    justify-content: space-between;
 }
