--- a/src/app/components/car-selector.component.html
+++ b/src/app/components/car-selector.component.html
@@ -20,7 +20,6 @@
                         </li>
                     </ul>
                 </li>
-            <ul class="navbar-nav">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="modelDropdown" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
@@ -28,20 +27,23 @@
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="modelDropdown" *ngIf="selectedMake">
                         <li *ngFor="let model of carModels">
-                            <a class="dropdown-item" href="#">{{ model }}</a>
+                            <a class="dropdown-item" href="#" (click)="onModelChange(model)">{{ model }}</a>
                         </li>
                     </ul>
                 </li>
             </ul>
-            </ul>
-            <div *ngIf="showEngineSpecs">
+            <div class="engine-specs" *ngIf="showEngineSpecs">
                 <h3>Engine Specifications:</h3>
                 <ul>
-                  <li *ngFor="let spec of engineSpecs">
-                    {{ spec.name }}: {{ spec.value }}
-                  </li>
+                  <ng-container *ngFor="let spec of engineSpecs">
+                    <li *ngIf="spec.fuel_type">Fuel Type: {{ spec.fuel_type }}</li>
+                    <li *ngIf="spec.cylinders">Cylinders: {{ spec.cylinders }}</li>
+                    <li *ngIf="spec.size">Size: {{ spec.size }}</li>
+                    <li *ngIf="spec.horsepower_hp">Horsepower: {{ spec.horsepower_hp }} hp</li>
+                    <li *ngIf="spec.transmission">Transmission: {{ spec.transmission }}</li>
+                  </ng-container>
                 </ul>
-              </div>
+            </div>
         </div>
     </div>
 </nav>
